syntax = "proto3";
package idp2p.pb;

message KeyValue {
    bytes key = 1; // Can be an id_event, credential or contract identifier
    bytes value = 2; // Can be an identity event, credential event or contract hash
}

message BlockPayload {
    bytes mutation_root = 1; // Merkle root of mutations
    repeated bytes inception_roots = 2; // 
}

message BlockHeader {
    uint64 id = 1; // This is the idp2p clock, it starts from 0 and increments 1 for each block
    bytes hash = 2; // Block merkle root
    bytes prev_hash = 3; // Privous block hash
    int64 timestamp = 4; // Time of block creation
}


